--- a/fevermap-front/src/assets/styles/imports.scss
+++ b/fevermap-front/src/assets/styles/imports.scss
@@ -1,5 +1,7 @@
 // Views
 @use "views/fevermap-landing";
+@use "views/fevermap-stats-content";
+@use "views/fevermap-data-entry";
 
 // Components
 @use "compontents/fevermap-navigation";
