--- a/fevermap-front/src/assets/styles/base.scss
+++ b/fevermap-front/src/assets/styles/base.scss
@@ -3,22 +3,87 @@
 
 body, html {
   font-family: 'Roboto', sans-serif;
+
+    margin: 0;
+    padding: 0;
+    background: #fafafa;
+    overflow-x: hidden;
+    max-height: 100vh;
 }
 
-* {
+p, h1, h2, h3, h4, label {
   color: #484848;
 }
 
+fevermap-landing, fevermap-stats, fevermap-data-entry {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
 
 .mb-4 {
   margin-bottom: 4rem;
 }
 
-.elevation {
-  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2), 0px 3px 4px 0px rgba(0, 0, 0, 0.14),
-  0px 1px 8px 0px rgba(0, 0, 0, 0.12);
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v50/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
 }
 
-.elevation-high {
-  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2), 0px 6px 10px 0px rgba(0,0,0,0.14), 0px 1px 18px 0px rgba(0,0,0,0.12);
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+
+.container {
+  color: #484848;
+  height: 100%;
+  overflow-y: auto;
+}
+
+.language-switcher {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  display: flex;
+}
+
+.language-switcher > p {
+  margin: 0 1rem 0 0;
+  color: #484848;
+  font-weight: bold;
+}
+
+.language-switcher > select {
+  background: none;
+  border: none;
+  border-bottom: 1px solid #484848;
+  padding: 0 2rem 0 0;
+  color: #484848;
+  outline: none;
+  transition: 0.1s linear;
+}
+
+.language-switcher > select:hover {
+  background: whitesmoke;
+}
+
+@media only screen and (max-width: 780px) {
+
+  .container {
+    margin-bottom: 5rem;
+  }
 }
