--- a/fevermap-front/src/assets/styles/views/fevermap-stats-content.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-stats-content.scss
@@ -1,12 +1,10 @@
-
-.fevermap-landing-content {
+.fevermap-stats-content {
   margin: 3rem 20% 10%;
   height: 100%;
 }
-
 @media only screen and (max-width: 780px) {
 
-  .fevermap-landing-content {
+  .fevermap-stats-content {
     margin: 3rem 5%;
   }
 }
