Feat: Submission button and adding questions 2 and 3 to localstorage

--- a/fevermap-front/src/assets/styles/base.scss
+++ b/fevermap-front/src/assets/styles/base.scss
@@ -59,6 +59,7 @@ fevermap-landing, fevermap-stats, fevermap-data-entry {
   top: 0.5rem;
   right: 0.5rem;
   display: flex;
+  z-index: 100;
 }
 
 .language-switcher > p {
