--- a/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
@@ -1,3 +1,5 @@
+@use "~@material/button/mixins";
+
 .fevermap-data-entry-content {
   margin: 3rem 30% 10%;
   height: 100%;
@@ -117,6 +119,24 @@
 
 .mdc-slider {
   color: #FFF;
+}
+
+.submit-button {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .mdc-button {
+    width: 100%;
+    height: 60px;
+    font-size: 1.3rem;
+
+    &:not(:disabled) {
+      color: #32cd32;
+      border-color: #32cd32;
+    }
+  }
 }
 
 @media only screen and (max-width: 780px) {
