--- a/fevermap-front/src/assets/styles/imports.scss
+++ b/fevermap-front/src/assets/styles/imports.scss
@@ -6,6 +6,8 @@
 // Components
 @use "compontents/fevermap-navigation";
 @use "compontents/material-icon";
+@use "compontents/input-field";
+@use "compontents/snackbar";
 
 // External
 
