Feat: Participant count on the front page

--- a/fevermap-front/src/assets/styles/compontents/fevermap-navigation.scss
+++ b/fevermap-front/src/assets/styles/compontents/fevermap-navigation.scss
@@ -40,6 +40,18 @@
   }
 }
 
+
+@media only screen and (max-width: 400px) {
+
+  .fevermap-navigation-wrapper {
+    .fevermap-navigation-block {
+      material-icon {
+        font-size: 1.6rem;
+      }
+    }
+  }
+}
+
 /* Navigation transitions */
 
 
