--- a/fevermap-front/src/assets/styles/views/fevermap-landing.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-landing.scss
@@ -4,6 +4,11 @@
   height: 100%;
 }
 
+.participant-count-subtitle {
+  margin: 2rem 0 0 0;
+  color: #ed143d;
+}
+
 @media only screen and (max-width: 780px) {
 
   .fevermap-landing-content {
