Feat: Don't know exactly, not measured checkbox hides slider too

--- a/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
@@ -74,6 +74,18 @@
   }
 }
 
+.fever-meters {
+  &--hidden {
+    display: none;
+  }
+}
+
+.fever-not-measured-field {
+  &--checked {
+    margin-top: 3rem;
+  }
+}
+
 .mdc-text-field {
   width: 100%;
 }
