Feat: Made animations and styling a bit better

--- a/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
@@ -75,14 +75,17 @@
 }
 
 .fever-meters {
+  opacity: 1;
+  transition: 0.1s linear;
   &--hidden {
-    display: none;
+    pointer-events: none;
+    opacity: 0;
   }
 }
 
 .fever-not-measured-field {
   &--checked {
-    margin-top: 3rem;
+    /*margin-top: 3rem;*/
   }
 }
 
