--- a/fevermap-front/src/assets/styles/views/fevermap-landing.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-landing.scss
@@ -1,17 +1,17 @@
 
 .fevermap-landing-content {
-  margin: 3rem 20% 10%;
+  margin: 1rem 20% 10%;
   height: 100%;
 }
 
 .participant-count-subtitle {
   margin: 2rem 0 0 0;
-  color: #ed143d;
+  color: #FF9800;
 }
 
 @media only screen and (max-width: 780px) {
 
   .fevermap-landing-content {
-    margin: 3rem 5%;
+    margin: 1rem 5%;
   }
 }
