--- a/fevermap-front/src/assets/styles/imports.scss
+++ b/fevermap-front/src/assets/styles/imports.scss
@@ -7,6 +7,7 @@
 @use "compontents/fevermap-navigation";
 @use "compontents/material-icon";
 @use "compontents/input-field";
+@use "compontents/select-field";
 @use "compontents/snackbar";
 
 // External
