--- a/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
+++ b/fevermap-front/src/assets/styles/views/fevermap-data-entry.scss
@@ -221,6 +221,10 @@ p.mdc-theme--error {
   }
 }
 
+.first-entry-disclaimer {
+  color: #ed143d;
+}
+
 @media only screen and (max-width: 780px) {
 
   .fevermap-data-entry-content {
