Fix: Revert blue and red in the temperature gradient
This way the red corresponds to hot.

--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -405,7 +405,7 @@ label {
 
   height: 12px;
   width: 50%;
-  background: linear-gradient(45deg, #F44336, #03A9F4);
+  background: linear-gradient(45deg, #03A9F4, #F44336);
   border-radius: 20px;
 
   -webkit-transform:rotate(-90deg);
