Feat: Data Entry view and Service Worker update

--- a/app/src/assets/styles/imports.scss
+++ b/app/src/assets/styles/imports.scss
@@ -2,6 +2,7 @@
 @use "views/fevermap-landing";
 @use "views/fevermap-stats-content";
 @use "views/fevermap-data-entry";
+@use "views/fevermap-data-view";
 
 // Components
 @use "compontents/fevermap-navigation";
