--- a/app/src/assets/styles/base.scss
+++ b/app/src/assets/styles/base.scss
@@ -94,6 +94,19 @@ fevermap-landing, fevermap-stats, fevermap-data-entry {
   background: whitesmoke;
 }
 
+.dev-mode-banner {
+  position: fixed;
+  left: 0;
+  bottom: 11%;
+  background: red;
+  p {
+    font-size: 0.8rem;
+    margin: 0;
+    color: #FFF;
+    padding: 0.25rem;
+  }
+}
+
 @media only screen and (max-width: 780px) {
 
   .container {
