Misc frond-end improvements: nicer banner, stats page call-to-action
- Make the development banner more prominent in left upper corner and make
  the font more readable and bold.
- Instead of an empty stats page, show a call-to-action to contribute in
  the app development on Gitlab.

--- a/app/src/assets/styles/views/fevermap-stats-content.scss
+++ b/app/src/assets/styles/views/fevermap-stats-content.scss
@@ -2,6 +2,15 @@
   margin: 3rem 20% 10%;
   height: 100%;
 }
+.stats-placeholder {
+  /* Placeholder div */
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid;
+  padding: 1rem;
+}
 @media only screen and (max-width: 780px) {
 
   .fevermap-stats-content {
