--- a/app/src/assets/styles/base.scss
+++ b/app/src/assets/styles/base.scss
@@ -96,11 +96,14 @@ fevermap-landing, fevermap-stats, fevermap-data-entry {
 
 .dev-mode-banner {
   position: fixed;
+  top: 0;
   left: 0;
-  bottom: 11%;
+  max-width: 50%;
+  z-index: 999; /* Always on top and visible */
   background: red;
   p {
     font-size: 0.8rem;
+    font-weight: bold;
     margin: 0;
     color: #FFF;
     padding: 0.25rem;
