--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ body {
   color: #000;
   background-color: #fff;
   font-family: Roboto,Arial,sans-serif;
-  text-align: center;
   font-size: 18px;
   line-height: 1.4;
 
@@ -129,6 +128,7 @@ section {
   width: 14rem;
   display: block;
   margin: auto;
+  text-align: center;
 }
 
 .cta[type="submit"] {
@@ -142,10 +142,16 @@ h1 {
   font-weight: 700;
   line-height: 1.1;
   font-size: 32px;
+  text-align: center;
+}
+
+h2, h3, h4 {
+  text-align: center;
 }
 
 p {
   padding: 10px;
+  text-align: center;
 }
 
 a {
@@ -167,4 +173,12 @@ input, button {
 
 #emailaddress {
   height: 30px;
+}
+
+section#main {
+  max-width: 60rem;
+}
+
+#presentations iframe {
+  margin: 1rem;
 }
