Fix: Fixed up styling on smaller mobile devices
Fix: More UI Fixes

--- a/app/src/assets/styles/compontents/input-field.scss
+++ b/app/src/assets/styles/compontents/input-field.scss
@@ -1,3 +1,14 @@
 .mdc-text-field {
   margin-bottom: 1rem;
 }
+
+
+@media only screen and (max-width: 780px) {
+  label {
+    font-size: 0.7rem;
+  }
+
+  .mdc-text-field {
+    height: 48px;
+  }
+}
