--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -19,6 +19,7 @@
   position: fixed;
   top: 1rem;
   right: 1rem;
+  z-index: 999;
   material-icon {
     font-size: 2rem;
     span {
@@ -32,6 +33,8 @@
   &--hidden {
     opacity: 0;
   }
+  display: flex;
+  align-items: center;
   opacity: 1;
   transition: 0.3s ease-in;
   position: fixed;
@@ -433,6 +436,10 @@ input[type="range"]::-webkit-slider-runnable-track {
 
   .fevermap-entry-carousel  {
     .fevermap-entry-window {
+
+      p.subtitle {
+        font-size: 0.8rem;
+      }
       .entry-field {
         width: 100%;
         p {
@@ -478,6 +485,20 @@ input[type="range"]::-webkit-slider-runnable-track {
   .fevermap-entry-dialog {
     margin-bottom: 3rem !important;
   }
+
+  .fevermap-data-entry-content {
+    min-height: 85vh;
+    padding: 5vh 0;
+  }
+
+  .fevermap-entry-carousel {
+    .fevermap-entry-window {
+      p {
+        font-size: 0.8rem;
+      }
+    }
+  }
+
 
   p.subtitle {
     margin: 0 0 0.5rem;
