--- a/app/src/assets/styles/views/fevermap-landing.scss
+++ b/app/src/assets/styles/views/fevermap-landing.scss
@@ -12,6 +12,6 @@
 @media only screen and (max-width: 780px) {
 
   .fevermap-landing-content {
-    margin: 1rem 5%;
+    margin: 1rem 5% 11vh;
   }
 }
