--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -1,4 +1,5 @@
 @use "~@material/button/mixins";
+@import "../palette";
 
 .container {
   margin-bottom: 1rem;
@@ -20,6 +21,7 @@
   top: 1rem;
   right: 1rem;
   z-index: 999;
+  color: $white;
   material-icon {
     font-size: 2rem;
     span {
@@ -40,7 +42,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(255,255,255, 0.99);
+  background: $deeppurple;
   z-index:100;
 }
 
@@ -238,6 +240,7 @@ p.mdc-theme--error {
 
   .fevermap-entry-window {
     width: calc(85vw - 4rem);
+    background: $white;
     border-radius: 25px;
     display: flex;
     align-items: center;
@@ -279,7 +282,7 @@ p.mdc-theme--error {
       text-align:center;
       margin-bottom: 1rem;
       .mdc-button {
-        background: cornflowerblue;
+        background: $bluegreen;
       }
     }
   }
