--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 /* Ensure are fills entire screen */
+@import url('https://fonts.googleapis.com/css?family=Karla|Nunito&display=swap');
+
 html {
   min-height: 800px;
   height: 100vh;
@@ -72,6 +74,7 @@ footer {
 
 h4 {
   text-transform: uppercase;
+  font-family: Karla;
   margin: 0.75rem 0rem;
 }
 
@@ -140,17 +143,24 @@ section {
 
 h1 {
   font-weight: 700;
+  font-family: Nunito;
   line-height: 1.1;
   font-size: 32px;
+  font-weight: bold;
   text-align: center;
 }
 
 h2, h3, h4 {
   text-align: center;
+  font-family: Nunito;
+  font-weight: bold;
+  
 }
 
 p {
   padding: 10px;
+  font-family: Karla, Arial, sans-serif;
+  font-size: 18px;
   text-align: center;
 }
 
