Add Press Kit secion to website footer

--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ h4 {
   margin: 0.75rem 0rem;
 }
 
-.contact-container {
+.contact-container, .press-kit-container {
   flex: 1 0;
   display: flex;
   flex-direction: column;
@@ -215,11 +215,19 @@ section#signup {
   margin: 1rem;
 }
 
-.contact-container h4 {
+footer h4 {
   color: #30bfbf;
 }
 
-.contact-container a {
+footer a {
   color: #eee;
   font-weight: bold;
+}
+
+
+footer ul {
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
