--- a/app/src/assets/styles/imports.scss
+++ b/app/src/assets/styles/imports.scss
@@ -10,6 +10,7 @@
 @use "compontents/input-field";
 @use "compontents/select-field";
 @use "compontents/snackbar";
+@use "compontents/fever-chart";
 
 // External
 
