--- a/app/src/assets/styles/views/fevermap-data-view.scss
+++ b/app/src/assets/styles/views/fevermap-data-view.scss
@@ -32,13 +32,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid;
-    background: linear-gradient(
-      rgba(255,195,191,1) 0%,
-      rgba(255,195,191,1) 40%,
-      rgba(220,244,255,1) 70%,
-      rgba(220,244,255,1) 95%
-    );
+
+    fever-chart {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
 
