Feat: Updated temp gradient to match better with values

--- a/app/src/assets/styles/views/fevermap-data-entry.scss
+++ b/app/src/assets/styles/views/fevermap-data-entry.scss
@@ -389,7 +389,7 @@ label {
 
   height: 12px;
   width: 50%;
-  background: linear-gradient(45deg, #03A9F4, #F44336);
+  background: linear-gradient(45deg, #03A9F4, #F44336 40%);
   border-radius: 20px;
 
   -webkit-transform:rotate(-90deg);
