Fix: Quick and dirty fix

--- a/app/src/assets/styles/views/fevermap-data-view.scss
+++ b/app/src/assets/styles/views/fevermap-data-view.scss
@@ -179,6 +179,10 @@
     pointer-events: none;
     cursor: default;
     margin-bottom: 0;
+
+    div {
+      display: none;
+    }
   }
   &--age-input {
 
