--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 /* Ensure are fills entire screen */
-@import url('https://fonts.googleapis.com/css?family=Karla|Nunito&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Karla|Nunito&display=swap");
 
 html {
   min-height: 800px;
@@ -12,7 +12,7 @@ html {
 body {
   color: #000;
   background-color: #fff;
-  font-family: Roboto,Arial,sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   font-size: 18px;
   line-height: 1.4;
 
@@ -27,8 +27,8 @@ body {
 #hero {
   background: linear-gradient(
     90deg,
-    rgba(153,38,103,1) 25%,
-    rgba(68,165,184,1) 75%
+    rgba(153, 38, 103, 1) 25%,
+    rgba(68, 165, 184, 1) 75%
   );
 }
 
@@ -45,7 +45,6 @@ body {
   padding: 0;
   display: none;
 }
-
 
 .spacer {
   height: 4rem;
@@ -68,10 +67,14 @@ body {
   margin: 2rem auto;
 }
 @media screen and (max-width: 800px) {
-    .flex-item {
-        height: unset;
-        max-height: 300px;
-    }
+  .flex-item {
+    height: unset;
+    max-height: 300px;
+  }
+  #youtube {
+    height: 310px !important;
+    width: 550px !important;
+  }
 }
 
 .flex-item p {
@@ -85,10 +88,11 @@ footer {
   background-color: #1f262a;
   color: #eee;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   width: 100vw;
-  height: 20rem;
-  align-items: center;
+  height: 15rem;
+  align-items: flex-start;
   padding: 0rem 4rem;
 }
 
@@ -102,29 +106,39 @@ h4 {
   margin: 0.75rem 0rem;
 }
 
-.contact-container, .press-kit-container {
+.contact-container {
   flex: 1 0;
   display: flex;
   flex-direction: column;
-  align-content: baseline;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: flex-start;
+  padding: 30px 15px 30px 50px;
+}
+.press-kit-container {
+  flex: 1 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 30px 15px;
 }
 
 .soc-wrapper {
   display: flex;
-  width: 30%;
+  width: 25%;
   align-content: center;
   justify-content: space-around;
-  padding: 0rem 2rem;
+  padding: 50px 15px;
 }
 @media screen and (max-width: 800px) {
   .soc-wrapper {
-    padding: 0rem;
+    padding: 30px 2rem;
     flex-wrap: wrap;
   }
   .soc-wrapper a {
-    margin: 0rem 0.5rem;
+    margin: 0.5rem 0.5rem;
   }
 }
 
@@ -141,10 +155,14 @@ main {
 
 section {
   padding: 0rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .breaker {
-  background-color:#f5f5f5;
+  background-color: #f5f5f5;
   width: 100%;
 }
 
@@ -152,6 +170,8 @@ section {
   border-radius: 3px;
   color: #fff;
   background: #30bfbf;
+  font-family: Karla;
+  font-weight: Bold;
   padding: 8px 12px;
   width: 14rem;
   display: block;
@@ -162,24 +182,33 @@ section {
 .cta[type="submit"] {
   border: none;
   margin: 0rem 0.5rem;
+  font-family: Karla;
+  font-weight: Bold;
   padding: 8px;
   width: 7rem;
 }
 
 h1 {
   font-weight: 700;
-  font-family: Nunito;
+  font-family: Karla;
   line-height: 1.1;
   font-size: 32px;
   font-weight: bold;
   text-align: center;
+  padding-top: 30px;
 }
 
-h2, h3, h4 {
+h2 {
   text-align: center;
   font-family: Nunito;
   font-weight: bold;
-
+  padding-top: 30px;
+}
+h3,
+h4 {
+  text-align: center;
+  font-family: Nunito;
+  font-weight: bold;
 }
 
 p {
@@ -199,24 +228,26 @@ form {
   justify-content: center;
 }
 @media screen and (max-width: 800px) {
-    form {
-        flex-direction: column;
-        align-items: center;
-    }
-    input {
-        margin-bottom: 10px;
-    }
+  form {
+    flex-direction: column;
+    align-items: center;
+  }
+  input {
+    margin-bottom: 10px;
+  }
 }
 
 /* Make call-to-action elements stand out */
-input, button {
+input,
+button {
   padding: 6px;
   font-size: 18px;
-  line-height: 1.4
+  line-height: 1.4;
 }
 
 #emailaddress {
   height: 30px;
+  font-family: Karla;
 }
 
 section#main {
@@ -230,6 +261,7 @@ section#signup {
 #presentations iframe {
   margin: 1rem;
   max-width: 100%;
+  padding-top: 30px;
 }
 
 footer h4 {
@@ -237,14 +269,46 @@ footer h4 {
 }
 
 footer a {
+  font-family: Karla;
   color: #eee;
   font-weight: bold;
 }
 
-
 footer ul {
   list-style-type: none;
-  text-align: center;
+  text-align: left;
   margin: 0;
   padding: 0;
+}
+@media (max-width: 650px) {
+  footer {
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    height: 600px;
+  }
+  .contact-container,
+  .press-kit-container,
+  .soc-wrapper {
+    width: 45%;
+    padding: 20px 0px;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 550px) {
+  footer {
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    height: 600px;
+  }
+  .contact-container,
+  .press-kit-container,
+  .soc-wrapper {
+    width: 80%;
+    padding: 20px 0px;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
 }
