--- a/app/src/assets/styles/base.scss
+++ b/app/src/assets/styles/base.scss
@@ -117,6 +117,9 @@ fevermap-landing, fevermap-stats, fevermap-data-entry {
     color: #FFF;
     padding: 0.25rem;
   }
+  a {
+    color: #ffffff;
+  }
 }
 
 @media only screen and (max-width: 780px) {
